# grammar-analyzer

./: .gitignore  assignment.md  pyproject.toml
src/grammar_analyzer/: __main__.py  basic_analyzer.py  common.py  enhancer.py  inputcmp.py  lalr_analyzer.py  left_recursion.py  ll_analizer.py  ll_analyzer.py  lr_analizer.py  lr_analyzer.py  rcp.py  regular_analyzer.py  shift_reduce_analyzer.py  slr_analizer.py  slr_analyzer.py  stapp.py  stutils.py
src/grammar_analyzer/enhancer/: __init__.py  converter.py  left_recursion.py  remove_common_prefix.py  remove_common_prefixes.py  unnecesary_productions.py
src/grammar_analyzer/input/: ast.py  evaluation.py  grammar.py  lexer.py
src/grammar_analyzer/interpreter/: __init__.py  evaluation.py  interpreter.py  language.py
src/grammar_analyzer/stapp/: __init__.py  basic_analysis.py  enhancement_analysis.py  lalr_analysis.py  ll_analysis.py  lr_analysis.py  regular_analysis.py  slr_analysis.py
src/pycmp/: ast.py  automata.py  evaluation.py  exceptions.py  grammar.py  lexer.py  parsing.py  regex.py  token.py  utils.py
src/utils/: visitor.py
src/utils.py/: visitor.py
tests/grammar_analyzer_tests/: test_inputcmp.py  test_interpreter.py  test_ll_analyzer.py  test_regular_analyzer.py  test_slr_analyzer.py  test_version.py
tests/grammar_analyzer_tests/enhancer_tests/: test_converter.py  test_left_recirsion.py  test_left_recursion.py  test_remove_common_prefix.py  test_unnecesary_productions.py
tests/pycmp_tests/: regex.py  test_automata.py  test_automata_cases.py  test_lexer.py  test_lexer_cases.py  test_parsing.py  test_parsing_cases.py  test_regex.py  test_version.py
