[tool.poetry]
name = "grammar-analyzer"
version = "0.1.0"
description = ""
authors = ["Jorge Mederos Alvarado <jmederosalvarado@gmail.com>"]
packages = [
	{include = "grammar_analyzer", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
