[tool.poetry]
name = "grammar-analyzer"
version = "0.1.0"
description = ""
authors = ["Jorge Mederos Alvarado <jmederosalvarado@gmail.com>"]
packages = [
	{include = "grammar_analyzer", from = "src"},
	{include = "pycmp", from = "src"},
	{include = "utils", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
pydot = "^1.4.1"
streamlit = "^0.54.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
